src/assets/scss/main.scss
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  background-color: rgb(26, 17, 16);
}

.banner {
  width: 100%;
  height: 600px;
}


.header-container{
  width: 100vw;
}

.header {
  padding-top: 1rem;
  position: fixed;
  height: 40px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: transparent;
  padding-left: 30px;
  padding-right: 50px;
  color: gray;
}

.header-mid-buttons {
  display: flex;
  flex-direction: row;
  gap: 20px;

}

.header-side-buttons {
  position: relative;
  display: flex;
  color: white;
  margin-right: 70px;
  gap: 40px;
  font-size: xx-large;
}

.secondary-header {
  position: absolute;
  display: flex;
  flex-direction: row;
  justify-content: center;
  z-index: 10;
  background-color: transparent;
  width: 100vw;

  margin: auto;
  top: 60px;
  color: white;
}

.secondary-child-header {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 20px;
  width: fit-content;
  padding: 0px 20px;
}

.child-header{
  display: flex;
  flex-direction: row;
  background: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(10px);
  border-radius: 20px;
}

.secondary-header-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 10px;
  cursor: pointer;
}


.search-bar {
  position: relative;
  color: white;
  background-color: #f5d020;
  background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.text-container{
  animation: bounce_search_box 0.5s;
  height:40px;
  display: none;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: absolute;
  top:60px;
  width:fit-content;
  left: 0;
  right: 0;
  margin: auto;
  z-index: 11;
  background-color: #f5d020;
  background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
  border-radius: 20px;
  padding: 0px 20px;
  p{
    color: white;
  }
}

.close-button{
  cursor: pointer;
  font-weight: 1000;
  position: relative;
  color: black;
  width: fit-content;
  margin-left: 20px;
  margin-right: -40px;
}

.text-box{
  width: 20vw;
  background-color: transparent;
  border: 0px;
  height: auto;
  color: white;
}




@keyframes bounce_container {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(-200);
  }
  40% {
    transform: translateY(-50px);
  }
  60% {
    transform: translateY(-15px);
  }
}

@keyframes bounce_search_box {
  0%, 20%, 50%, 80%, 100% {
    transform: translateX(-200);
  }
  40% {
    transform: translateX(-50px);
  }
  60% {
    transform: translateX(-15px);
  }
}

// nav drop down 
.dropdown-container {
  animation: bounce_container 0.5s;
  position: absolute;
  display: none;
  flex-direction: column;
  justify-content: flex-start;
  background: rgba(255, 255, 255, 0.2);
  /* Background color with transparency */
  padding: 20px;
  backdrop-filter: blur(10px);
  top: 120px;
  z-index: 11px;
  width: 50%;
  height: auto;
  left: 0;
  right: 0;
  margin: auto;
  transition: transform 0.3s ease-in-out; 
}

.dropdown-container-header {
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0px 20px;
  color: white;
  height: 50px;
}

.dropdown-container-content {
  background-color: transparent;
  height: auto;
  padding: 30px;
  color: white;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  /* Create a 3-column grid with equal widths */
  gap: 10px;

}

.dropdown-container-item {
  display: flex;
  flex-direction: row;
  gap: 20px;
}

.product-list {
  max-width: 100%;
  margin: 20px 150px;
  height: auto;
  margin-bottom: 40px;
}

.product-list-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  color: white;
  background-color: transparent;
  padding: 0px 10px;
}

.view-all-button-container{
  border: 1px solid;
  font-weight: 800;
  border-radius: 10px;
  color: white;
  background-color: rgb(26, 17, 16);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30px;
  padding:20px 20px;
  cursor: pointer;
}

.product-list-items{
  display: flex;
  flex-direction: row;
  gap:20px;
}

.product-list-item{
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  cursor: pointer;
 
}

.product-item-detail{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  color: whitesmoke;
}

